TEST_PROGRAMS/INVALID/07/comments.go
/* Block comments do not nest
/* The star-slash on the right ends the above comment */
This is an error */
